--- a/coding_journey.css
+++ b/coding_journey.css
@@ -1,19 +1,19 @@
 
 body {
-    background-color: rgb(59, 173, 240);
+    background-color: rgb(180, 223, 248);
 }
 
 .title_page {
-    background-color: rgb(78, 77, 77);
+    background-color: rgb(36, 34, 34);
     color: rgb(179, 171, 171);
-    margin: -5px -5px 5px -5px;
-    border-radius: 15px;
+    margin: -10px -10px 5px -10px;
+    /* border-radius: 15px; */
     padding: 10px 10px 10px 10px;
     
 }
 
 .title_page .heading {
-    font-size: 40px;
+    font-size: 60px;
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     font-weight: 200;
@@ -26,23 +26,62 @@ body {
     font-weight: 200;
 }
 
-.page .language {
+/* .page .language {
     float: left;
     width: 19%;
     background-color: rgb(43, 41, 41);
     font-size: 40px;
+} */
+
+.page {
+    background-color: rgb(138, 135, 135);
+    margin: 0px -10px 5px -10px;
+    /* border-radius: 15px; */
+    padding: 10px 10px 10px 10px;
+    /* height:10cm; */
+}
+
+.page .title {
+    font-size: 40px;
+    background-color: rgb(36, 34, 34);
+    /* border-radius: 15px; */
+    margin: -10px -10px 5px -10px;
+    text-align: center;
+    color:rgb(44, 138, 192);
+    font-family: 'Courier New', Courier, monospace;
+
+
+
 }
 
 .page .info{
-    background-color: rgb(138, 135, 135);
-    color: rgb(236, 232, 232);
-    margin: 0px -5px 5px 0px;
-    border-radius: 15px;
-    padding: 10px 10px 10px 10px;
-    float: right;
-    width: 78%;
+    /* background-color: rgb(138, 135, 135); */
+    color: rgbrgb(78, 77, 77);
+    /* float: right; */
+    /* width: 78%; */
     text-align: left;
+    font-family: 'Courier New', Courier, monospace;
+
 }
 
+#introduction .info {
+    position: static;
+    /* clear: left; */
+    float: left;
+    width: 75%;
+}
+
+#introduction img {
+    position: static;
+    float: right;
+    width: 20%;
+    padding: 2.5%;
+    /* clear: right; */
+
+}
+
+.clearing {
+    clear: both;
+}
 
 
